# elementari

./: .env.example  .gitignore  .pre-commit-config.yaml  changelog.md  contributing.md  deno.jsonc  eslint.config.js  netlify.toml  package.json  playwright.config.ts  pnpm-lock.yaml  readme.md  stackbit.config.ts  svelte.config.js  tsconfig.json  vite.config.ts
.github/workflows/: gh-pages.yml  test.yml
extensions/notebook/: DEVELOPMENT.md  LICENSE  README.md  package.json  pyproject.toml  tsconfig.json  vite.config.ts  vitest.config.ts
extensions/notebook/examples/: jupyter_demo.ipynb  marimo_demo.py
extensions/notebook/matterviz_notebook/: __init__.py  mime.py  structure.py  trajectory.py
extensions/notebook/src/: StructureApp.svelte  TrajectoryApp.svelte  index.test.ts  index.ts
extensions/notebook/tests/: setup.ts  test_widgets.py
extensions/vscode/: .vscodeignore  license  matterviz-0.1.0-beta.1.vsix  package.json  readme.md  tsconfig.json  vite.config.mjs  vite.config.ts
routes/scatter-plot-e2e/: +page.svelte
src/: app.css  app.d.ts  app.html  colors.ts  emmet_pydantic_to_ts.py  fetch-elem-images.ts  labels.ts  periodic-table-data.ts  stores.ts  types.ts  update-site-screenshots.ts
src/lib/: ActiveElement.svelte  BohrAtom.svelte  ChemicalElement.svelte  ColorBar.svelte  ColorCustomizer.svelte  ColorScaleSelect.svelte  ControlPanel.svelte  DataPoint.svelte  DraggablePanel.svelte  EasterEgg.svelte  ElementHeading.svelte  ElementPhoto.svelte  ElementScatter.svelte  ElementStats.svelte  ElementTile.svelte  Footer.svelte  Icon.svelte  InfoCard.svelte  Line.svelte  Nucleus.svelte  PeriodicTable.svelte  PrevNextElement.svelte  PropertySelect.svelte  ScatterPlot.svelte  ScatterPoint.svelte  Spinner.svelte  Structure.svelte  StructureCard.svelte  StructureLegend.svelte  StructureScene.svelte  TableInset.svelte  Toggle.svelte  ToolTip.svelte  actions.ts  api.ts  attachments.ts  colors.ts  element-data.ts  element-data.yml  icons.ts  (+11 more)
src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.md  +page.svelte  [slug].svelte  [slug].ts  __error.svelte  __layout.svelte  acknowledgements.svx  bohr-atoms.svelte  index.svelte
src/site/: DemoNav.svelte  EasterEgg.svelte  FileCarousel.svelte  Footer.svelte  PeriodicTableControls.svelte  PeriodicTableDemo.svelte  PrevNextElement.svelte  PropertySelect.svelte  index.ts  plot-utils.ts  state.svelte.ts  stores.ts
static/: img-sources.json  prism-syntax-highlight-theme-aware.css  prism-vsc-dark-plus.css  themes.js  trajectories
static/elements/: 1-hydrogen.avif  10-neon.avif  100-fermium.avif  101-mendelevium.avif  102-nobelium.avif  103-lawrencium.avif  104-rutherfordium.avif  105-dubnium.avif  106-seaborgium.avif  107-bohrium.avif  108-hassium.avif  109-meitnerium.avif  11-sodium.avif  110-darmstadtium.avif  111-roentgenium.avif  12-magnesium.avif  (+95 more)
tests/: atomic-bohr-model.test.ts  bohr-atoms.test.ts  colorbar.test.ts  element-data.test.ts  element-detail-pages.test.ts  index.ts  lattice.test.ts  periodic-table.test.ts  plot-legend.test.ts  scatter-plot.test.ts  structure-scene.test.ts  structure.test.ts  trajectory.test.ts
(+288 files in other folders)
